# LUFT

./: CMakeLists.txt  LICENSE  README.md
Luft/: CMakeLists.txt
Luft/src/: Version.h
Luft/src/Client/: CMakeLists.txt  EditorApp.cpp
Luft/src/Luft/: Luft.h
Luft/src/Luft/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  EnumDefs.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Localization.cpp  Log.h  SystemService.cpp  SystemService.h  Timestep.h  Window.cpp  Window.h  larray.h  lstr.h
Luft/src/Luft/Events/: ApplicationEvents.h  Event.h
Luft/src/Luft/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Luft/src/Platform/Windows/: WinUtils.cpp  WinUtils.h  WindowsWindow.cpp  WindowsWindow.h
scripts/: GenerateProjects-Cmake-VS2017.bat  GenerateProjects-Cmake-VS2019.bat  GenerateProjects-Cmake-VS2022.bat
src/Client/: CMakeLists.txt  EditorApp.cpp  Entry.cpp
src/Core/: CMakeLists.txt  Luft.h  Version.h.in
src/Core/Base/: Application.h  Core.h  Log.cpp  Log.h
